message BootRequest{
    required int32 requestCode=1;
    required string name=2;
    required int32 sex=3;
    required string accessTime=4;
}

message BootResponse{
    required int32 requestCode=1;
    required int32 respCode=2;
    required string result=3;
}